share image added

--- a/data/hoverboard.config.json
+++ b/data/hoverboard.config.json
@@ -73,7 +73,7 @@
       "permalink": "/team/"
     }
   ],
-  "url": "https://hoverboard.firebaseapp.com/",
+  "url": "devfest16.gdgsrilanka.org",
   "mailchimp": {
     "url": "",
     "name": "b_b7e853a79164ddfdbda3ed77b_7993e39fbe"
