--- a/data/hoverboard.config.json
+++ b/data/hoverboard.config.json
@@ -175,7 +175,7 @@
       "caption": "segments"
     }
   ],
-  "hashtag": "devfestsl2016",
+  "hashtag": "devfestlk16",
   "social": [
     {
       "name": "twitter",
